1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

Tue May 11 23:59:55 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* ovsec_kadmd.c (main): Fix how we specify the OID.

Fri May  7 17:15:17 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* ovsec_kadmd.c: Remove dependency on gssapi_krb5.h by using
 		gss_str_to_oid() to get the necessary oid for the
 		krb5_name name type.  Also added #include files to get
 		prototypes and fixed some gcc -Wall nits.  Fixed calls to
 		krb5_klog_close() to pass the krb5_context as an argument.

Mon Mar  1 21:24:49 1999  Tom Yu  <tlyu@mit.edu>

	* ovsec_kadmd.c (log_badverf): Actually make a real lookup table
	for procedure numbers.  Also, if we don't find the procedure
	number, just log the number rather than falling off the end of an
	array.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-10-27  Marc Horowitz  <marc@mit.edu>

	* ovsec_kadmd.c: add calls to a new function
	_svcauth_gssapi_unset_names() to clean up memory when shutting
	down.  Use krb5_overridekeyname instead of krb5_defkeyname, so the
	command line takes precedence over the environment.

Wed Jul 22 00:28:57 1998  Geoffrey King  <gjking@mit.edu>

	* ovsec_kadmd.c (main): Cast gss_nt_krb5_name to
	        gss_OID to avoid compiler warnings.

Tue Jul 21 16:36:51 1998  Geoffrey King  <gjking@mit.edu>

	* ovsec_kadmd.c: Call krb5_klog_reopen in kadm_svc_run
		upon receiving a SIGHUP.  Use sigaction instead of
		signal if POSIX_SIGNALS is defined.  All of the calls
		to signal and sigaction are now in a separate function
		setup_signal_handlers, as the kdc code does.  Also,