@@ -1,3 +1,9 @@
+2000-02-17  Tom Yu  <tlyu@mit.edu>
+
+	* server_stubs.c: Add create_principal3_1, chpass_principal3_1,
+	setkey_principal3_1, and chrand_principal3_1 to do the obvious
+	things.
+
 1999-10-26  Tom Yu  <tlyu@mit.edu>
 
 	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
